# test

agents/: agent.py  app.py  autograde_agent.py  autograde_app.py  database.py  email_agent.py  gemini_agent.py  gemini_app.py  on_query.py  pdf_agent.py  pdf_app.py  pyproject.toml  quiz_agent.py  shorts_agent.py  shorts_app.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css  theme.js
ui/src/components/: ChatBot.jsx  ContentPage.jsx  Dashboard.jsx  DashboardCourse.jsx  EducationPreference.jsx  Flashcard.jsx  HomePage.jsx  LearningEventList.jsx  Login.jsx  NavBar.jsx  PiChart.jsx  PreferenceForm.jsx  Quiz.jsx  QuizPage.jsx  Quizpage.jsx  StudyPlan.jsx  Title.jsx  TodayTask.jsx  Typing.jsx  Upload.jsx  UploadPage.jsx  feedback.jsx
ui/src/components/Calerndar/: Calendar.jsx  Schedule.jsx  TaskList.jsx
ui/src/context/: AuthProvider.jsx
