[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Nicolas Huang <nsiyuhuang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
uagents = "^0.11.1"
google-generativeai = "^0.5.2"
pymongo = "^4.6.3"
pypdf2 = "^3.0.1"
flask-cors = "^4.0.0"
openai = "^1.23.2"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
